# kwin-effect-pulse

./: CMakeLists.txt  pulse.cpp  pulse.desktop  pulse.h  pulse_config.cpp  pulse_config.desktop  pulse_config.h  pulse_config.ui  scaleout.cpp  scaleout.desktop  scaleout.h  scaleout_config.cpp  scaleout_config.desktop  scaleout_config.h  scaleout_config.ui
